# audio-tool

./: .gitignore  CLAUDE.md  LICENCE  README.md  license_to_commit.sh  pyproject.toml
src/audio_tool/: __init__.py  analyzer.py  cli.py  config.py  normalization.py  transcriber.py  trimmer.py
src/audio_tool/commands/: __init__.py  analyze.py  audio2json.py  normalize.py  trim.py
